CKA/Manual_scheduler.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx
spec:
   nodeName: node01
   containters:
       - image: nginx
         name: nginx
