CKA/PVC-Storageclaim.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx:alpine
    name: nginx
    volumeMounts:
    - mountPath: /var/www/html
      name: local-pv
  volumes:
    - name: local-pv
      persistentVolumeClaim:
       claimName: local-pvc
