CKA/command&args.yml
apiVersion: v1
kind: Pod
metadata:
    name: myapp-pod
    labels:
        app: myapp
        type: front-end
spec:
    containers:
        - name: ubuntu
          image: ubuntu
          command: ["python", "app.py"]
          args: ["--color", "pink"]
