CKA/deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: httpd-frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            name: httpd-frontend
    template:
        metadata:
            name: httpd-frontend
            labels:
                name: httpd-frontend
        spec:
            containers:
                - name: httpd-frontend
                  image: httpd:2.4-alpine
