CKA/pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
    name: pod
    labels:
        - app: pod
spec:
  containers:
      - name: redis123
        image: nginx
