CKA/pod-dev-namespace.yml
apiVersion: v1
kind: Pod
metadata:
    name: redis
    namespace: dev
spec:
    containers:
        - name: redis
          image: redis
