CKA/pod-namespace.yml
apiVersion: v1
kind: Pod
metadata:
    name: redis
spec:
    containers:
        - name: redis
          image: redis
