CKA/node_service.yml
apiVersion: v1
kind: Service
metadata:
    name: webapp-service    
spec:
    type: NodePort
    selector:
        app: simple-webapp
    ports:
      - targetPort: 80
        port: 80
        nodePort: 30080
