CKA/ingress-resource1.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: app-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /wear
        pathType: Prefix
        backend:
          serviceName: wear-service
          servicePort: 8080
      - path: /watch
        pathType: Prefix
        backend:
          serviceName: video-service
          servicePort: 8080
